<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CE2F322E"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextView_Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="האפילקציה של אורי"
        android:gravity="center"
        android:textColor="#E6DBDB"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:layout_marginTop="108dp"
        android:onClick="goToChooseNumber"
        android:text="@string/multiply"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Main" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="136dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:onClick="goToChooseNumber"
        android:text="@string/division"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_random"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:onClick="goToChooseNumber"
        android:text="@string/random"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_division" />

</androidx.constraintlayout.widget.ConstraintLayout>