<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/multiply"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/multiply_textview_default"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <TextView
        android:id="@+id/exercise_textView_excercise"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        android:text="@string/multiply_exercise_textview_before"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:onClick="numberPressed"
        android:text="1"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_textView_excercise" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:onClick="numberPressed"
        android:text="2"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/exercise_textView_excercise" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:onClick="numberPressed"
        android:text="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_textView_excercise" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:onClick="numberPressed"
        android:text="4"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="numberPressed"
        android:text="5"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:onClick="numberPressed"
        android:text="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:onClick="numberPressed"
        android:text="7"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="numberPressed"
        android:text="8"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:onClick="numberPressed"
        android:text="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="71dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="numberPressed"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/button_submit"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_erase"
        android:layout_width="70dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:onClick="erase"
        app:icon="@android:drawable/ic_input_delete"
        app:iconGravity="start|end"
        app:iconSize="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button_0"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="70dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:onClick="submit"
        app:icon="@android:drawable/ic_menu_send"
        app:iconGravity="top"
        app:iconSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_exercise_back_to_main"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:onClick="goBackToMain"
        android:text="@string/back_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reveal" />

    <TextView
        android:id="@+id/exercise_textView_result"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/exercise_result_before"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toEndOf="@+id/exercise_textView_excercise"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/button_reveal"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button_background_color"
        android:onClick="reveal"
        android:text="@string/reveal"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_0" />

    <ImageView
        android:id="@+id/imageView_success"
        android:layout_width="75dp"
        android:layout_height="73dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_exercise_back_to_main"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/check_mark" />

    <ImageView
        android:id="@+id/imageView_error"
        android:layout_width="95dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_exercise_back_to_main"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cross" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/errorAnimationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/errorAnimationView"
        android:layout_width="410dp"
        android:layout_height="306dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/error" />




</androidx.constraintlayout.widget.ConstraintLayout>